# SAELens

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  make_hf_repo.sh  pyproject.toml  requirements-gh200.txt  requirements.txt
benchmark/: test_activations_store.py
config/: config.yaml  config_autointerp.yaml  config_eval.yaml
config/architecture/: gated.yaml  jumprelu.yaml  ridge.yaml  standard.yaml  topk.yaml
config/cache_activations/: default.yaml
config/dataset/: default.yaml
config/evaluation/: default.yaml
config/experiment/: basic.yaml  cache_acts.yaml  mlp_hookpoint_topk.yaml  resid_hookpoint_topk.yaml  ridge.yaml  ridge_debug.yaml  ridge_simplestories.yaml  sae_simplestories.yaml  ss_ridge.yaml  ss_sae.yaml  sweep_expansion_factor.yaml  sweep_expansion_factor_debug.yaml  topk_sae.yaml  topk_sae_160m.yaml  topk_sae_70m.yaml  topk_sae_debug.yaml  topk_sae_debug_14m.yaml  topk_sae_debug_70m.yaml  topk_sae_medium.yaml  topk_sae_small_fix_dead_70m.yaml  topk_sae_small_sparsity_70m.yaml
config/hydra/hydra_logging/: colorlog.yaml
config/hydra/job_logging/: colorlog.yaml
config/launcher/: base.yaml  ray.yaml  ray_jobs.yaml
config/logging/: default.yaml  wandb.yaml
config/model/: default.yaml  gpt2_small.yaml  pythia_70m.yaml  simplestories-1.25m.yaml  simplestories-35m.yaml  simplestories.yaml
config/optimization/: cosine_annealing.yaml  cosine_warm_restarts.yaml  default.yaml
config/performance/: default.yaml  gpu_optimized.yaml
config/pretokenize/: default.yaml
config/resampling/: default.yaml
config/training/: default.yaml  large_scale.yaml  small_scale.yaml
experiments/: debug.ipynb  evaluating_saes_with_sae_lens_evals copy.ipynb  ridge.ipynb  sae_vis.ipynb
sae_lens/: __init__.py  cache_activations_runner.py  config.py  evals.py  pretokenize_runner.py  sae.py  sae_training_runner.py
sae_lens/training/: activations_store.py  sae_trainer.py  training_sae.py  upload_saes_to_huggingface.py
scripts/: ai_commit.py  autointerp_pipeline.py  entrypoint.sh  eval_local_sae.py  install.sh  install_ai_commit.sh  pretokenize.py  rclone_sync.sh  run_saebench.sh  serve_local_lm.py  train_ridge_sae.py  train_sae.py  train_script.py
